[package]
name = "scratchpad"
version = "1.0.0-beta.1"
authors = ["Theodore Cipicchio <okready@users.noreply.github.com>"]
license = "MIT/Apache-2.0"
description = "Stack-like dynamic memory pool with double-ended allocation support"
documentation = "https://docs.rs/scratchpad"
homepage = "https://github.com/okready/scratchpad"
repository = "https://github.com/okready/scratchpad"
readme = "README.md"
categories = ["data-structures", "embedded", "memory-management", "no-std"]
keywords = ["stack", "pool", "memory", "allocator", "no_std"]

[badges]
travis-ci = { repository = "okready/scratchpad" }

[features]
default = ["std"]

# Allow `std` library usage. Currently only used to implement `Buffer` for
# boxed slices (`std::boxed::Box`) in Rust stable.
std = []

# Allow unstable features (requires a nightly toolchain).
unstable = []

[dev-dependencies]
arrayvec = { version = "0.4", default-features = false }
